[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langdetect>=1.0.9",
    "matplotlib>=3.9.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pytest>=8.4.2",
    "streamlit>=1.50.0",
    "torch>=2.8.0",
    "transformers>=4.57.6",
    "underthesea>=9.0.0",
    "wordcloud>=1.9.6",
]
